--- a/laterna-react-app/package.json
+++ b/laterna-react-app/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "animate.css": "^4.1.1",
     "classnames": "^2.2.6",
+    "emailjs-com": "^2.6.4",
     "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
