--- a/laterna-react-app/package.json
+++ b/laterna-react-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://frontendpole.github.io/projekt-laterna",
+  "homepage": "http://projektlaterna.pl",
   "name": "laterna-react-app",
   "version": "0.1.0",
   "private": true,
